--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <title>Shwetha</title>
 </head>
 <body>
-    <h1>hello </h1>
+    <h1>Think41 Interview </h1>
 </body>
 </html>
